# bigfloat

./: .gitignore  CMakeLists.txt  README.md  avx_helper.hpp  bench_simd.cpp  bf.cpp  bf.hpp  bigfloat.cpp  bigfloat.h  bigfloat.hpp  bigfloat_mpfr.h  interop_eigen.hpp  interop_mpfr.hpp  library.h  math.cpp  math.hpp  simd.cpp  simd.hpp  simd_vec2.cpp  simd_vec2.hpp  simd_vec4.cpp  simd_vec4.hpp  sisd_vec4.cpp  sisd_vec4.hpp
.github/workflows/: unit-tests.yml  verification.yml
Boost_tests/: CMakeLists.txt  bigfloat_tests.cpp
benchmark/: CMakeLists.txt  advanced.hpp  bench_simd.h  bigfloat_benchmark.cpp  control.hpp  helper.hpp  main.cpp  ops.hpp  shared.hpp
benchmark/nbody/: body.hpp  nbody_bf_simd.hpp  nbody_sisd.hpp  util.hpp
bigfloat/: CMakeLists.txt  avx_helper.hpp  bf.cpp  bf.hpp  bigfloat.hpp  fwd.hpp  helpers.inl  mat4.cpp  mat4.hpp  mat_4.cpp  mat_4.hpp  math.cpp  math.hpp  matrix_utils.hpp  simd_vec4.cpp  simd_vec4.hpp  sisd_vec4.cpp  sisd_vec4.hpp  vec4.cpp  vec4.hpp
bigfloat/interop/: boost.hpp  glm.hpp
dev/bench/: data.js
include/: boost_interop.hpp  mat_4.hpp
include/interop/: boost.hpp
notes/: algorithms.md  algorithms.tex
src/: CMakeLists.txt  bf.cpp  bigfloat.hpp  mat_4.cpp  math.cpp  simd.cpp  simd.hpp  simd_vec4.cpp  sisd_vec4.cpp
test/: CMakeLists.txt  _include.hpp  bigfloat_tests.cpp  helper_tests.cpp  mat4_tests.cpp  simd_tests.cpp  simd_vec4_tests.cpp  vecn_tests.cpp
